[gd_scene load_steps=2 format=3 uid="uid://c1h5lam3n7p8q"]

[ext_resource type="Script" path="res://src/GameCompleteScreen.gd" id="1_game_complete"]

[node name="GameCompleteScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_complete")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Time: 00:00.00"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_layout = 2

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "New High Score!"
horizontal_alignment = 1
visible = false

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter your name:"
horizontal_alignment = 1
visible = false

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
max_length = 10
placeholder_text = "Your Name"
visible = false

[node name="Spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit Score"
visible = false

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
